# codecrafters-shell-c

./: .gitignore  CMakeLists.txt  README.md
app/: builtins.c  builtins.h  main.c  shell.c  shell.h  structs.c  structs.h  utils.c  utils.h
